Adds missing build block in pom.xml